# Gomoku-AI

backend/: AIWine.py  README.md  Rapfi.py  Rapfi2.py  TicTacToeAI3.py  TicTacToeAi.py  TicTacToeAi1.py  a.py  app copy.py  app.py
backend/cmake_example/: CMakeLists.txt
backend/cmake_example/src/: main.cpp
backend/cmake_example/src/AIWine/src/: AIWine.cpp  AIWine.h
backend2/: Embryo.py  EmbryoMultithread.py  Rapfi.py  TicTacToeAi2.py  app.py  cmake_example-0.0.1-cp310-cp310-win_amd64.whl  requirements.txt
frontend/public/: script.js
referee/: Board.py  app.py
